feat(team): View Team page update
Add tabbed interface similar to how admin pages works.  Current view team page content is now under 'General' tab.
This will allow downstream applications to add additional app specific team tabs without having to update core team code.

--- a/src/styles/ngx-bootstrap/_cards.scss
+++ b/src/styles/ngx-bootstrap/_cards.scss
@@ -18,6 +18,14 @@ $card-selected-check-size: 2rem !default;
 			margin-bottom: 0;
 		}
 	}
+
+	&.flex-row {
+		.card-header {
+			height: auto;
+			border-bottom: 0;
+			border-right: $border-width solid $border-color;
+		}
+	}
 }
 
 .card-selectable {
