--- a/src/app/core/teams/view-team/view-team.component.html
+++ b/src/app/core/teams/view-team/view-team.component.html
@@ -1,17 +1,16 @@
-<!-- Alert Notifications -->
-<system-alert></system-alert>
+<section class="view-team-container" *ngIf="team; else noTeam">
+	<!-- Alert Notifications -->
+	<system-alert></system-alert>
 
-<!-- Show a breadcrumb to the list teams page -->
-<div class="mb-3">
-	<a class="back-link mb-1" routerLink="/teams">
-		<span class="fa fa-angle-double-left"></span> Back to Teams
-	</a>
-</div>
+	<!-- Show a breadcrumb to the list teams page -->
+	<div class="mb-3">
+		<a class="back-link mb-1" routerLink="/teams">
+			<span class="fa fa-angle-double-left"></span> Back to Teams
+		</a>
+	</div>
 
-<ng-container *ngIf="team; else noTeam">
 	<div class="d-flex mb-3">
 		<h1>{{ team.name }}</h1>
-
 		<button
 			type="button"
 			class="btn btn-link ml-auto"
@@ -22,181 +21,20 @@
 		</button>
 	</div>
 
-	<div class="cards row">
-		<div class="col col-na-xl-7 col-12">
-			<div class="card">
-				<div class="card-header d-flex align-items-center">
-					<h2>Members</h2>
-				</div>
-				<div class="card-body">
-					<list-team-members [team]="team"></list-team-members>
-				</div>
-			</div>
-		</div>
+	<ul class="nav nav-tabs">
+		<li *ngFor="let topic of topics" class="nav-item" role="presentation">
+			<a
+				class="nav-link"
+				[routerLink]="['/team/', team._id, topic.path]"
+				routerLinkActive="active"
+			>
+				{{ topic.title }}
+			</a>
+		</li>
+	</ul>
 
-		<div class="col col-na-xl-5 col-12">
-			<div class="card">
-				<div class="card-header d-flex align-items-center">
-					<h2>Details</h2>
-					<button
-						class="btn btn-outline-secondary ml-3"
-						type="button"
-						[disabled]="isEditing"
-						*ngIf="canManageTeam"
-						(click)="edit()"
-					>
-						<span class="fa fa-lg fa-pencil"></span>
-					</button>
-					<div class="inline-edit-header-btns ml-auto" *ngIf="isEditing">
-						<button
-							class="btn btn-outline-secondary"
-							type="button"
-							(click)="cancelEdit()"
-						>
-							Cancel
-						</button>
-						<button
-							class="btn btn-primary ml-2"
-							type="button"
-							[disabled]="!editTeamForm.form.valid"
-							(click)="saveEdit()"
-						>
-							Save
-						</button>
-					</div>
-				</div>
-				<div class="card-body" [class.editing]="isEditing">
-					<form id="edit-team-form" #editTeamForm="ngForm">
-						<div class="form-inline-edit mb-3">
-							<div class="form-group">
-								<label class="col col-form-label">Name</label>
-								<div class="col col-form-readonly-value" *ngIf="!isEditing">
-									<div>{{ team.name || '' | titlecase }}</div>
-								</div>
-								<div class="col" *ngIf="isEditing">
-									<input
-										class="form-control"
-										placeholder="Enter name"
-										name="name"
-										[(ngModel)]="_team.name"
-										required
-									/>
-								</div>
-							</div>
-
-							<div class="form-group">
-								<label class="col col-form-label">Description</label>
-								<div class="col col-form-readonly-value" *ngIf="!isEditing">
-									<div style="white-space: pre-wrap">{{ team.description }}</div>
-								</div>
-								<div class="col" *ngIf="isEditing">
-									<textarea
-										class="form-control"
-										placeholder="Enter description"
-										name="description"
-										[(ngModel)]="_team.description"
-									>
-									</textarea>
-								</div>
-							</div>
-
-							<div class="form-group">
-								<label class="col col-form-label">Date Created</label>
-								<div class="col col-form-readonly-value">
-									<div>{{ team.created | utcDate: 'yyyy-MM-dd' }}</div>
-								</div>
-							</div>
-
-							<div class="form-group" *ngIf="team.parent">
-								<label class="col col-form-label">Parent</label>
-								<div class="col col-form-readonly-value">
-									<div>
-										<a
-											class="text-decoration-underline"
-											[routerLink]="['/team', team.parent._id || team.parent]"
-										>
-											{{ team.parent.name }}
-										</a>
-									</div>
-								</div>
-							</div>
-
-							<div
-								class="form-group"
-								*ngIf="
-									team.implicitMembers &&
-									implicitMembersStrategy === 'roles' &&
-									((team.requiresExternalRoles?.length || 0) > 0 || isEditing)
-								"
-							>
-								<label class="col col-form-label">External Roles</label>
-								<div class="col col-form-readonly-value" *ngIf="!isEditing">
-									<div>{{ team.requiresExternalRoles | join: ', ' }}</div>
-								</div>
-								<div class="col" *ngIf="isEditing">
-									<asy-multi-select-input
-										placeholder="Start typing a role..."
-										name="externalRoles"
-										[(ngModel)]="_team.requiresExternalRoles"
-									></asy-multi-select-input>
-								</div>
-							</div>
-
-							<div
-								class="form-group"
-								*ngIf="
-									team.implicitMembers &&
-									implicitMembersStrategy === 'teams' &&
-									((team.requiresExternalTeams?.length || 0) > 0 || isEditing)
-								"
-							>
-								<label class="col col-form-label">External Teams</label>
-								<div class="col col-form-readonly-value" *ngIf="!isEditing">
-									<div>{{ team.requiresExternalTeams | join: ', ' }}</div>
-								</div>
-								<div class="col" *ngIf="isEditing">
-									<asy-multi-select-input
-										placeholder="Start typing a team..."
-										name="externalTeams"
-										[(ngModel)]="_team.requiresExternalTeams"
-									></asy-multi-select-input>
-								</div>
-							</div>
-						</div>
-					</form>
-
-					<div class="inline-edit-btns text-right" *ngIf="isEditing">
-						<button
-							class="btn btn-outline-secondary"
-							type="button"
-							(click)="cancelEdit()"
-						>
-							Cancel
-						</button>
-						<button
-							class="btn btn-primary ml-2"
-							type="button"
-							[disabled]="!editTeamForm.form.valid"
-							(click)="saveEdit()"
-						>
-							Save
-						</button>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="col col-na-xl-7 col-12" *ngIf="nestedTeamsEnabled">
-			<div class="card">
-				<div class="card-header d-flex align-items-center">
-					<h2>Sub-Teams</h2>
-				</div>
-				<div class="card-body">
-					<app-list-teams [parent]="team" [embedded]="true"></app-list-teams>
-				</div>
-			</div>
-		</div>
+	<div class="view-team-section-container">
+		<router-outlet></router-outlet>
 	</div>
-</ng-container>
-
+</section>
 <ng-template #noTeam> Error: Team not found </ng-template>
