--- a/src/app/core/audit/list-audit-entries/list-audit-entries.component.html
+++ b/src/app/core/audit/list-audit-entries/list-audit-entries.component.html
@@ -11,9 +11,22 @@
 </section>
 
 <section class="page-body anchored-page-body">
+	<div class="table-header d-flex align-items-center">
+		<div class="table-actions d-flex flex-wrap flex-grow-1">
+			<div class="mb-3 ml-auto">
+				<button
+					class="btn btn-outline-secondary"
+					type="button"
+					(click)="exportCurrentView()"
+				>
+					<span class="fa-solid fa-download"></span> Export
+				</button>
+			</div>
+		</div>
+	</div>
 	<div class="table-content">
 		<table class="table table-striped" asyFilter asySort cdk-table [dataSource]="dataSource">
-			<ng-container cdkColumnDef="actor">
+			<ng-container cdkColumnDef="audit.actor">
 				<th asy-sort-header="audit.actor.name" cdk-header-cell *cdkHeaderCellDef>
 					<span class="fa-solid fa-user"></span>
 					Actor
@@ -51,7 +64,7 @@
 				</td>
 			</ng-container>
 			<ng-container cdkColumnDef="audit.auditType">
-				<th asy-sort-header="audit.auditType" cdk-header-cell *cdkHeaderCellDef>
+				<th asy-sort-header cdk-header-cell *cdkHeaderCellDef>
 					<span class="fa-solid fa-tag"></span>
 					Type
 					<asy-header-filter
@@ -64,7 +77,7 @@
 					{{ entry?.audit?.auditType }}
 				</td>
 			</ng-container>
-			<ng-container cdkColumnDef="object">
+			<ng-container cdkColumnDef="audit.object">
 				<th asy-sort-header cdk-header-cell *cdkHeaderCellDef>Object</th>
 				<td class="hide-overflow" cdk-cell *cdkCellDef="let entry">
 					<asy-audit-component
@@ -125,7 +138,7 @@
 					{{ entry?.message }}
 				</td>
 			</ng-container>
-			<ng-container cdkColumnDef="masqueradingUser">
+			<ng-container cdkColumnDef="audit.masqueradingUser">
 				<th cdk-header-cell *cdkHeaderCellDef>
 					<span class="fa-solid fa-user-secret"></span>
 					Masquerading User
